<resources>
    <string name="app_name">DroidMockup</string>
    <string name="title_food_detail">Food Detail</string>
    <string name="action_settings">Settings</string>
    <string name="action_reject">Reject</string>
    <string name="action_accept">Accept</string>
    <string name="action_accept15">Accept 15m</string>
    <string name="action_accept30">Accept 30m</string>
    <string name="action_accept45">Accept 45m</string>
    <string name="action_accept60">Accept 60m</string>
</resources>
